<resources>
    <string name="app_name">ViaDiabet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_questions">Kendinizi Bize Tanıtın</string>
    <string name="activity_meal_calculator">Besin Değerlerini Hesapla</string>
    <string name="activity_input_data">Veri Girişi</string>
    <string name="activity_data_bank">Veri Bankası</string>

    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="kan_degeri">Kan Değeri</string>
    <string name="tarih">Tarih</string>
    <string name="saat">Saat</string>
    <string name="uyari">Lütfen bir bilgi giriniz!</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="action_compose">Yaz</string>
    <string name="action_search">Ara</string>
    <string name="btn_send_message">Send Message</string>

    <!-- ViaDiabet -->
    <string name="text_last_check">Son Kontrol</string>
    <string name="text_last_check_blood">243</string>
    <string name="text_last_check_date">30.07.2015</string>
    <string name="text_insulin">12 uIU/mL</string>
    <string name="text_last_check_insulin">Son İnsülin</string>
    <string name="text_insulin_unit">uIU/mL</string>
    <string name="text_auto_comment_time">30.07.2015 10:18</string>
    <string name="text_auto_comment">HEY! Şekerini</string>
    <string name="button_save_data">Veri Girişi</string>
    <string name="button_reports">Rapor Gönder</string>
    <string name="button_calculator">Besin Değerleri</string>
    <string name="button_lines">Çizelgeler</string>
    <string name="button_graphs">Grafikler</string>
    <string name="button_remainders">Hatırlatıcı</string>
    <string name="button_database">Veri Bankası</string>
    <string name="text_last_days_view">daha sık ölç</string>
    <string name="last_data">Son Veri</string>

    <!-- Login & Sign Up -->
    <string name="username">Kullanıcı Adı</string>
    <string name="username_edittext">Lütfen kullanıcı adınızı giriniz</string>
    <string name="password">Şifre</string>
    <string name="password_edittext">Lütfen şifreinizi giriniz</string>
    <string name="password_again">Şifre (Tekrar)</string>
    <string name="password_again_edittext">Şifrenizi tekrar giriniz</string>
    <string name="email">E-Posta</string>
    <string name="email_edittext">info@mycodeyourproject.com</string>
    <string name="phonenumber">Telefon No</string>
    <string name="phonenumber_edittext">+90 507 504 25 70</string>
    <string name="lifestyle">Yaşam Tarzınız -></string>
    <string name="birthdate">Doğum Tarihi</string>
    <string name="turkishid">T.C. Kimlik No</string>
    <string name="turkishid_edittext">Lütfen T.C. kimlik numaranızı giriniz</string>
    <string name="name">Ad</string>
    <string name="name_edittext">Lütfen adınızı giriniz</string>
    <string name="surname">Soyad</string>
    <string name="surname_edittext">Lütfen soyadınızı giriniz</string>

    <!-- Meal Calculator -->
    <string name="carbonhydrade">Karbonhidrat</string>
    <string name="lipid">Yağ</string>
    <string name="protein">Protein</string>
    <string name="calori">Kalori</string>
    <string name="meal_list">Yemek Listesi</string>

    <!-- Input Data -->
    <string name="text_date_time">Date Time</string>
    <string name="zero">0</string>

    <!-- Settings -->
    <string name="checkbox_auto_update">Auto Update</string>
    <string name="checkbox_send_mail_doctor">Send Mail To Doctor</string>
    <string name="textview_doctor_mail">Mail Of Doctor</string>
    <string name="edittext_doctor_mail">example@mail.com</string>
    <string name="checkbox_show_lunch_time_alert">Show Lunch Time Alert</string>
    <string name="checkbox_use_immediate_call">Use Immediate Call</string>
    <string name="textview_immediate_call">Immediate Call Number</string>
    <string name="edittext_immediate_call">(+90)507 504 2570</string>
    <string name="checkbox_show_your_logs_to_friend">Show Your Logs To Friend</string>
    <string name="button_find_your_friend">Find Your Friend</string>
    <string name="edittext_find_your_friend">E-Mail/Nickname</string>
    <string name="button_save_settings">Save Preferences</string>
    <string name="preferences_saved">Bilgiler Kaydedildi!</string>

    <!-- Preference Screen -->
    <string name="summary_auto_update">Updates program when new version released</string>
    <string name="summary_send_mail_doctor">Send logs to doctor via email</string>
    <string name="summary_show_lunch_time_alert">Show alerts for lunch</string>
    <string name="summary_use_immediate_call">Call someone immediately when something happens</string>
    <string name="summary_show_your_logs_to_friend">Allow connection to your friend for your logs</string>

    <!-- Questions -->
    <string name="personal_information">Kişisel Bilgiler</string>
    <string name="age">Yaş</string>
    <string name="age_hint">Lütfen yaşınızı giriniz</string>
    <string name="height">Boy</string>
    <string name="height_hint">Lütfen boyunuzu giriniz</string>
    <string name="gender">Cinsiyet</string>
    <string name="gender_text">Erkek,Kadın</string>
    <string name="weight">Kilo</string>
    <string name="weight_hint">Lütfen kilonuzu giriniz</string>
    <string name="male">Erkek</string>
    <string name="female">Erkek</string>
    <string name="meslek">Meslek</string>
    <string name="medeni_durum">Medeni Durum</string>
    <string name="life_style">Yaşam Tarzı</string>
    <string name="uyanma_saati">Uyanma Saati</string>
    <string name="uyuma_saati">Uyuma Saati</string>
    <string name="spor_aktivitesi">Spor Aktivitesi</string>
    <string name="sport_cyclic">Sıklık</string>
    <string name="sport_time">Süresi</string>
    <string name="seyahat">Seyahat ediyor musunuz?</string>
    <string name="meals">Beslenme</string>
    <string name="breakfast_time">Kahvaltı Zamanı</string>
    <string name="lunch_time">Öğle Yemeği Zamanı</string>
    <string name="dinner_time">Akşam Yemeği Zamanı</string>
    <string name="choose_breakfast">Kahvaltı Yiyeceklerinizi Seçin</string>
    <string name="choose_lunch">Öğle Yemeği Yiyeceklerinizi Seçin</string>
    <string name="choose_dinner">Akşam Yiyeceklerinizi Seçin</string>
    <string name="snack_after_breakfast">Kahvaltı Sonrası Ara Öğün</string>
    <string name="snack_after_lunch">Öğle Yemeği Sonrası Ara Öğün</string>
    <string name="snack_after_dinner">Akşam Yemeği Sonrası Ara Öğün</string>
    <string name="water">Günde Kaç Litre Su İçiyorsun</string>
    <string name="lovely_meals">Sevdiğin Yiyecekler</string>
    <string name="button_choose_lovely_meals">Yiyecek Seç</string>
    <string name="disliked_meals">Yiyemediğin Yiyecekler</string>
    <string name="button_choose_disliked_meals">Yiyecek Seç</string>
    <string name="smoke">Sigara Kullanıyor Musun?</string>
    <string name="alcohol">Alkol Kullanıyor Musun?</string>
    <string name="allergia">Alerji veya başka bir rahatsızlığınız var mı?</string>
    <string name="medicine">İlaç Kullanıyor Musun?</string>
    <string name="comments">Paylaşmak İstedikleriniz</string>
    <string name="complete_signup">Kayıt İşlemini Tamamla</string>

    <!-- Data Bank -->
    <string name="total_count">Toplam Kayıt</string>
    <string name="unit">Adet</string>
    <string name="daily_glicose_measurement">Günlük Glikoz Ölçümü</string>
    <string name="estimated_hb1ac">Tahmini Hb1Ac</string>
    <string name="date_time">Tarih-Saat</string>
    <string name="process">İşlem</string>
    <string name="value">Değer</string>
    <string name="period">Periyot</string>
    <string name="count">Sayım</string>
    <string name="analyze">Analiz</string>
    <string name="average">Ort.</string>
    <string name="min_value">Min.</string>
    <string name="max_value">Max.</string>
    <string name="weight_change">Değişim</string>

    <!-- Activity titles -->
    <string name="activity_main">VIADIABET</string>
    <string name="activity_settings">SETTINGS</string>

    <!-- Action Bar action items -->
    <string name="action_my_info">Bilgilerim</string>
    <string name="action_logs">Veri Bankası</string>
    <string name="action_diet">Diyetim</string>
    <string name="action_contacts">Arkadaşlar</string>
    <string name="action_help">Yardım</string>
    <string name="action_check_updates">Güncellemeler</string>
    <string name="action_save">Kaydet</string>
    <string name="action_tools">Araçlar</string>
    <string name="action_about">Hakkında</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_app_not_found">App not found</string>
    <string name="action_logout">Çıkış</string>
    <string name="action_back">Geri</string>

    <!-- Search  -->
    <string name="search_hint">Search color..</string>
    <string name="activity_new_message">Location found. Drop a message here...</string>
    <string name="test">test</string>

    <!-- Custom Spinner -->
    <string name="hello">Custom Spinner</string>
    <string name="defaultText">  Select your Company  </string>
    <string name="select_Category">Select Company</string>

    <!-- Input Data -->
    <string name="input_date_time">Tarih ve Saat</string>
    <string name="text_glicose">Glikoz</string>
    <string name="text_carbonhydrade">Karbonhidrat</string>
    <string name="text_insuline">İnsülin</string>
    <string name="text_category">Kategori</string>
    <string name="text_colestrol">Kolesterol</string>
    <string name="text_weight">Ağırlık</string>
    <string name="text_hb1ac">HbA1c</string>
    <string name="unity_colestrol">mg/dL</string>
    <string name="unity_weight">kg</string>
    <string name="unity_hb1ac">%</string>

    <string-array name="array_name">
        <item>Seçiniz</item>
        <item>Item Two</item>
        <item>Item Three</item>
    </string-array>
    <string name="title_activity_diet_list">DietList</string>
    <string name="title_activity_stats">Stats</string>
    <string name="custom_notification">Şekerini ölç!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="facebook_app_id">817672744967667</string>
    <string name="title_activity_send_report">Rapor Gönder</string>
    <string name="title_activity_graphs">Graphs</string>

</resources>
