<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycodeyourproject.senbuldiyabetkolaylassin.SignupActivity"
    android:orientation="vertical">
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:text="@string/username_edittext"
        app:label="@string/username"
        android:id="@+id/signup_username"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:text="@string/password_edittext"
        app:label="@string/password"
        android:id="@+id/signup_password"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:text="@string/password_again_edittext"
        app:label="@string/password_again"
        android:id="@+id/signup_password_again"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:text="@string/email_edittext"
        app:label="@string/email"
        android:id="@+id/signup_email"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        app:text="@string/phonenumber_edittext"
        app:label="@string/phonenumber"
        android:id="@+id/signup_phone_number"/>
    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/lifestyle"
        android:id="@+id/buttonSave"
        android:layout_gravity="right"
        android:onClick="signUp"
        android:background="@drawable/buttonstyle"
        style="@style/viadiabetButton"/>
</LinearLayout>
