<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_update"
        android:text="@string/checkbox_auto_update"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_send_mail_doctor"
        android:text="@string/checkbox_send_mail_doctor"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_doctor_mail"
            android:text="@string/textview_doctor_mail"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_doctor_mail"
            android:text="@string/edittext_doctor_mail"
            android:inputType="textEmailAddress"
            android:ems="10"/>
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_show_lunch_time_alert"
        android:text="@string/checkbox_show_lunch_time_alert"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_use_immediate_call"
        android:text="@string/checkbox_use_immediate_call"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_immediate_call"
            android:text="@string/textview_immediate_call"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_immediate_call"
            android:text="@string/edittext_immediate_call"
            android:inputType="phone"
            android:ems="10"/>
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_show_your_logs_to_friend"
        android:text="@string/checkbox_show_your_logs_to_friend"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_find_your_friend"
            android:text="@string/button_find_your_friend"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_friend_name"
            android:text="@string/edittext_find_your_friend"
            android:ems="10"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_save_settings"
        android:text="@string/button_save_settings"/>
</LinearLayout>