<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.mycodeyourproject.senbuldiyabetkolaylassin.ImageTextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:text="@string/zero"
        app:label="@string/total_count"
        android:src="@drawable/ic_cast_dark"
        app:unit="@string/unit"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.ImageTextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:text="@string/zero"
        app:label="@string/daily_glicose_measurement"
        android:src="@drawable/ic_cast_dark"
        app:unit="@string/unit"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.ImageTextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:text="@string/zero"
        app:label="@string/estimated_hb1ac"
        android:src="@drawable/ic_cast_dark"
        app:unit="@string/unit"/>
    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                android:layout_marginLeft="10dp"
                android:id="@+id/textview_datetime"
                android:layout_column="0"
                android:layout_row="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/process"
                android:layout_marginLeft="60dp"
                android:layout_row="0"
                android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:layout_marginLeft="60dp"
            android:layout_row="0"
            android:layout_column="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30.07.2015 14:53"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:layout_marginLeft="60dp"
            android:layout_row="1"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:layout_marginLeft="60dp"
            android:layout_row="1"
            android:layout_column="2"/>
    </GridLayout>
</LinearLayout>