<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealCalculator">
<!--    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:label="@string/carbonhydrade"
        app:text="@string/zero"
        android:id="@+id/textbox_carbonhydrade"/>-->
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:label="@string/lipid"
        app:text="@string/zero"
        android:id="@+id/textbox_fat"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:label="@string/protein"
        app:text="@string/zero"
        android:id="@+id/textbox_protein"/>
    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:label="@string/calori"
        app:text="@string/zero"
        android:id="@+id/textbox_calori"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            style="@style/textViewDecorative"
            android:text="@string/meal_list"
            android:layout_toRightOf="@+id/image_favorites"
            android:id="@+id/textview_meal_list"/>
        <ExpandableListView
            android:id="@+id/listView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ExpandableListView>
</LinearLayout>