<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mycodeyourproject.senbuldiyabetkolaylassin.SendReport"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Rapor"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        style="@style/textViewDecorative"/>
    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/image_statistics"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_data"
            android:layout_marginLeft="10dp"
            android:id="@+id/textview_datetime"
            android:layout_column="0"
            android:layout_row="0"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:layout_column="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:layout_column="2"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Karbonhidrat"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="115 kCal"
            android:layout_marginLeft="20dp"
            android:layout_row="1"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30.07.2015 14:53"
            android:layout_marginLeft="20dp"
            android:layout_row="1"
            android:layout_column="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kalori"
            android:layout_marginLeft="10dp"
            android:layout_row="2"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="85 kCal"
            android:layout_marginLeft="20dp"
            android:layout_row="2"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30.07.2015 14:53"
            android:layout_marginLeft="20dp"
            android:layout_row="2"
            android:layout_column="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Belirtilmemiş"
            android:layout_marginLeft="10dp"
            android:layout_row="3"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_marginLeft="20dp"
            android:layout_row="3"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_marginLeft="20dp"
            android:layout_row="3"
            android:layout_column="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Belirtilmemiş"
            android:layout_marginLeft="10dp"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_marginLeft="20dp"
            android:layout_row="4"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_marginLeft="20dp"
            android:layout_row="4"
            android:layout_column="2"/>
    </GridLayout>

    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:hint="@string/email_edittext"
        android:inputType="text"
        app:label="@string/email"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="E-mail Gönder"
        android:id="@+id/mailButton"
        android:onClick="buttonAction"
        android:layout_gravity="right"
        android:background="@drawable/buttonstyle"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:hint="@string/phonenumber_edittext"
        android:inputType="text"
        app:label="@string/phonenumber"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="SMS GÖNDER"
        android:id="@+id/smsButton"
        android:onClick="buttonAction"
        android:layout_gravity="right"
        android:background="@drawable/buttonstyle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>



</LinearLayout>
