<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mycodeyourproject.senbuldiyabetkolaylassin.LoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/login_form">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/viadiabet_login"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:hint="@string/username_edittext"
            android:inputType="text"
            app:label="@string/username"
            android:id="@+id/login_username"/>
        <com.mycodeyourproject.senbuldiyabetkolaylassin.TextBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:hint="@string/password_edittext"
            app:label="@string/password"
            app:intype="true"
            android:id="@+id/login_password"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kayıt Ol"
                android:id="@+id/login_signup_button"
                android:background="@drawable/buttonstyle"
                android:onClick="KayitOl"
                style="@style/viadiabetButton"
                android:layout_gravity="center_vertical"
                android:layout_weight=".4"/>
            <Button
                android:id="@+id/login_signin_button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:background="@drawable/buttonstyle"
                android:onClick="GirisYap"
                style="@style/viadiabetButton"
                android:layout_gravity="center_vertical"
                android:layout_weight=".6"/>
        </LinearLayout>
        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.mycodeyourproject.senbuldiyabetkolaylassin.FaceBookFragment"
            android:id="@+id/fragment"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.2" />
    </LinearLayout>
</LinearLayout>

